<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmxRace"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_basket"
        android:src="@drawable/bmxrace1"
        android:contentDescription="@string/desc_img_bmx" />

    <TextView
        android:id="@+id/bmxrace_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_foot_et"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/text_bmxRace"
        android:layout_below="@id/img"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"/>

    <TextView
        android:id="@+id/bmxrace_et2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_bmx"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/text_bmxRace2"
        android:layout_below="@id/bmxrace_et"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"/>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmxrace_et2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/retour"
        app:backgroundTint="@color/black" />

</RelativeLayout>