<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Natation"
    android:background="@color/cyan">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_basket"
        android:src="@drawable/natation1"
        android:contentDescription="@string/desc_img_natation" />

    <TextView
        android:id="@+id/natation_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_foot_et"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/text_natation"
        android:layout_below="@id/img"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"
        android:textColor="@color/back_main"/>

    <TextView
        android:id="@+id/natation_et2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/marginTop_splash"
        android:text="@string/text_natation2"
        android:layout_below="@id/natation_et"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"
        android:textColor="@color/back_main"/>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/natation_et2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop2"
        android:text="@string/retour"
        app:backgroundTint="@color/black" />

</RelativeLayout>