<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Football"
    android:background="@color/green">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_foot"
        android:src="@drawable/foot1"
        android:contentDescription="@string/Desc_foot_img"
        />

    <TextView
        android:id="@+id/foot_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_main"
        android:text="@string/text_foot"
        android:layout_below="@id/img"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/foot_et2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/marginTop_splash"
        android:text="@string/text_foot2"
        android:layout_below="@id/foot_et"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foot_et2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/retour"
        app:backgroundTint="@color/black" />
</RelativeLayout>