<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Handball"
    android:background="@color/list">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_hand"
        android:src="@drawable/handball1"
        android:contentDescription="@string/img_handball" />

    <TextView
        android:id="@+id/handball_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/marginTop_splash"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/text_hand"
        android:layout_below="@id/img"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"
        android:textColor="@color/cyan"/>

    <TextView
        android:id="@+id/handball_et2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/marginTop_splash"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/text_hand2"
        android:layout_below="@id/handball_et"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginRight="@dimen/marginRight"
        android:textColor="@color/cyan"/>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/handball_et2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/retour"
        app:backgroundTint="@color/black" />
</RelativeLayout>